--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrar no Twitter / Twitter</title>
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="icon" type="image/png" href="./assets/favicon.ico"/>
+    <link rel="icon" type="image/png" href="https://abs.twimg.com/errors/logo23x19.png"/>
 </head>
 
 <body>
