--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <section class="form-section">
         <form>
             <div class="input-area">
-                <label>
+                <label for="login">
                     Celular, e-mail ou nome de usuário
                 </label>
-                <input type="text" name="login" autocomplete="off">
+                <input type="text" name="login" id="login" autocomplete="off">
             </div>
             <div class="input-area">
-                <label>
+                <label for="password">
                     Senha
                 </label>
-                <input type="password" name="password">
+                <input type="password" id="password" name="password">
             </div>
             <button class="twitter-button" type="submit">
                 Entrar
